episodes/040/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
spec:
  hostNetwork: true
  containers:
  - name: curl
    image: curlimages/curl
    command: ['sh', '-c', 'sleep 1000']
