episodes/040/ccnp-coredns.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: coredns
specs:
  - nodeSelector:
      matchLabels: 
        {}
    egress:
    - toEndpoints: 
      - matchLabels:
          k8s-app: kube-dns
      toPorts:
      - ports:
        - port: '8080'
          protocol: TCP
        - port: '8181'
          protocol: TCP
  - endpointSelector:
      matchLabels: 
        k8s-app: kube-dns
    ingress:
    - fromEntities:
      - host
      toPorts:
      - ports:
        - port: '8080'
          protocol: TCP
        - port: '8181'
          protocol: TCP
